# gsttransformer

./: CMakeLists.txt  README.md
clientsamples/cpp/: client.cpp  client.h  clientcli.cpp  clientcli.h  gst-transformer-client.cpp  gst-transformer-inproc.cpp
cmake/: FindGRPC.cmake
docker/: .gitignore  Dockerfile  Makefile  run.sh
src/lib/: dynamicpipeline.cpp  dynamicpipeline.h  pipeline.h  pipelineparameters.cpp  pipelineparameters.h
src/lib/server/: grunloop.cpp  grunloop.h  serverpipelinefactory.cpp  serverpipelinefactory.h  serviceimpl.cpp  serviceimpl.h
src/lib/server/async/: asyncserviceimpl.cpp  asyncserviceimpl.h  asynctransformimpl.cpp  asynctransformimpl.h
src/lib/server/protos/: gsttransformer.proto  serviceparameters.proto
src/samples/: client.cpp  clientcli.cpp  clientcli.h  gst-transformer-inproc.cpp
src/server/: gst-transformer.cpp  sampleconfig.json  servercli.cpp  servercli.h  serviceparams.cpp  serviceparams.h
